# fastapi-scratch

./: .env  .envrc  .gitignore  .pre-commit-config.yaml  .travis-ci.yml  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
fastapi_scratch/: main.py
tests/: test_main.py
